--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 }
 
 .Fylo-link::after {
-  content: url(icon-arrow.svg);
+  content: url(illustrations/icon-arrow.svg);
   width: 10px;
   height: 10px;
   margin-left: 0.5rem;
@@ -49,7 +49,7 @@ body {
 }
 
 .founder-pic {
-  background-image: url(Avatar-testimonial.jpg);
+  background-image: url(illustrations/Avatar-testimonial.jpg);
   background-size: cover;
   width: 50px;
   height: 50px;
@@ -128,7 +128,7 @@ body {
 }
 
 .pic-one {
-  background: url(illustration-1.svg);
+  background: url(illustrations/illustration-1.svg);
   width: 500px;
   height: 370px;
   background-size: 100%;
@@ -144,7 +144,7 @@ body {
 }
 
 .pic-two {
-  background: url(illustration-2.svg);
+  background: url(illustrations/illustration-2.svg);
   width: 500px;
   height: 370px;
   background-size: 100%;
@@ -152,7 +152,7 @@ body {
 }
 
 .wave {
-  background: url(bg-curve-desktop.svg);
+  background: url(illustrations/bg-curve-desktop.svg);
 
   width: 1440px;
   height: 100px;
@@ -177,7 +177,7 @@ body {
 
 .logo-footer {
   margin-left: 2.5rem;
-  background-image: url(logo.svg);
+  background-image: url(illustrations/logo.svg);
   filter: invert(100%);
   background-size: cover;
   width: 210px;
@@ -191,11 +191,11 @@ body {
 }
 
 .phone::before {
-  content: url(icon-phone.svg) " ";
+  content: url(illustrations/icon-phone.svg) " ";
 }
 
 .mail::before {
-  content: url(icon-email.svg) " ";
+  content: url(illustrations/icon-email.svg) " ";
 }
 
 .footer-list {
@@ -243,7 +243,7 @@ body {
 }
 
 .quote-item {
-  background-image: url(icon-quotes.svg);
+  background-image: url(illustrations/icon-quotes.svg);
   width: 15px;
   height: 15px;
   background-size: cover;
