--- a/style.css
+++ b/style.css
@@ -32,34 +32,15 @@ body {
   --neutral-color-two: hsl(0, 0%, 75%);
 }
 
-.Fylo-link::after {
-  content: url(illustrations/icon-arrow.svg);
-  width: 10px;
-  height: 10px;
-  margin-left: 0.5rem;
-}
-
 /*Specific-Styling*/
+
+/* Top Bar */
 
 .logo {
   height: 200px;
   width: 200px;
   margin: auto;
   margin-left: 1px;
-}
-
-.founder-pic {
-  background-image: url(illustrations/Avatar-testimonial.jpg);
-  background-size: cover;
-  width: 50px;
-  height: 50px;
-  border-radius: 50px;
-}
-
-.founder-text {
-  margin-left: 70px;
-  width: 300px;
-  line-height: 0.5rem;
 }
 
 .flex-header {
@@ -71,63 +52,7 @@ body {
   max-width: 1440px;
 }
 
-.Button-started {
-  background-color: var(--accent-color-one);
-  color: white;
-  padding-left: 3rem;
-  padding-right: 3rem;
-  padding-top: 0.3rem;
-  padding-bottom: 0.3rem;
-  font-family: inherit;
-  border: none;
-  border-radius: 5px;
-}
-
-.Button-started:hover {
-  background-color: var(--accent-color-two);
-  cursor: pointer;
-}
-
-.Acces {
-  color: white;
-}
-
-.container {
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
-  padding: 2rem;
-  background-color: var(--primary-color-two);
-  gap: 5rem;
-  max-width: 1440px;
-}
-
-.input2 {
-  padding-right: 10rem;
-  padding-top: 0.5rem;
-}
-
-.button2 {
-  margin-top: 0.4rem;
-  background-color: var(--accent-color-one);
-  color: white;
-  padding-left: 5rem;
-  padding-right: 5rem;
-  padding-top: 0.8rem;
-  padding-bottom: 0.8rem;
-  font-family: inherit;
-  border: none;
-  border-radius: 5px;
-}
-
-.button2:hover {
-  background-color: var(--accent-color-two);
-  cursor: pointer;
-}
-
-.Fylo-link:hover {
-  color: var(--accent-color-two);
-}
+/* Upper Area */
 
 .container-pic-one {
   display: flex;
@@ -153,12 +78,100 @@ body {
   max-width: 1440px;
 }
 
+.input-wrapper {
+  position: relative;
+}
+
+.description {
+  position: absolute;
+  left: 10px;
+  top: 30px;
+  color: rgb(165, 165, 165);
+}
+
+.input {
+  width: 300px;
+  margin-right: 1rem;
+  font-size: 1rem;
+  padding-inline: 0.1rem;
+  padding-block: 0.8rem;
+  margin-block: 0.2rem;
+}
+
+input:focus + .description,
+.text-input:not(:placeholder-shown) + .description {
+  font-size: 0.8rem;
+  top: 1px;
+}
+
+.Button-started {
+  background-color: var(--accent-color-one);
+  color: white;
+  padding-left: 4rem;
+  padding-right: 4rem;
+  padding-top: 0.9rem;
+  padding-bottom: 0.9rem;
+  font-family: inherit;
+  font-size: 1rem;
+  border: none;
+  border-radius: 5px;
+  margin-block: 1rem;
+}
+
+.Button-started:hover {
+  background-color: var(--accent-color-two);
+  cursor: pointer;
+}
+
+/* Middle Area */
+
 .pic-two {
   background: url(illustrations/illustration-2.svg);
   width: 500px;
   height: 370px;
   background-size: 100%;
   margin-right: 4rem;
+}
+
+.founder-pic {
+  background-image: url(illustrations/Avatar-testimonial.jpg);
+  background-size: cover;
+  width: 50px;
+  height: 50px;
+  border-radius: 50px;
+}
+
+.founder-text {
+  margin-left: 70px;
+  width: 300px;
+  line-height: 0.5rem;
+}
+
+.quote-item {
+  background-image: url(illustrations/icon-quotes.svg);
+  width: 15px;
+  height: 15px;
+  background-size: cover;
+}
+
+.quote-container {
+  background-color: white;
+  width: 400px;
+  padding: 2rem;
+  margin: 2rem;
+  border-radius: 0.8rem;
+  box-shadow: 10px 14px rgba(223, 222, 222, 0.521);
+}
+
+.Fylo-link:hover {
+  color: var(--accent-color-two);
+}
+
+.Fylo-link::after {
+  content: url(illustrations/icon-arrow.svg);
+  width: 10px;
+  height: 10px;
+  margin-left: 0.5rem;
 }
 
 .wave {
@@ -168,12 +181,51 @@ body {
   height: 100px;
 }
 
+/* Lower Area */
+
+.container {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 2rem;
+  background-color: var(--primary-color-two);
+  gap: 5rem;
+  max-width: 1440px;
+}
+
+.Acces {
+  color: white;
+}
+
+.input2 {
+  padding-right: 10rem;
+  padding-top: 0.5rem;
+}
+
+.button2 {
+  margin-top: 0.4rem;
+  background-color: var(--accent-color-one);
+  color: white;
+  padding-left: 5rem;
+  padding-right: 5rem;
+  padding-top: 0.8rem;
+  padding-bottom: 0.8rem;
+  font-family: inherit;
+  border: none;
+  border-radius: 5px;
+}
+
+.button2:hover {
+  background-color: var(--accent-color-two);
+  cursor: pointer;
+}
+
 /* Footer Styling */
 
 .flex-footer {
   color: white;
   display: flex;
-  gap: 13rem;
+  gap: 10%;
   justify-content: flex start;
   list-style-type: none;
   line-height: 2rem;
@@ -194,6 +246,10 @@ body {
   height: 60px;
   margin-top: 4rem;
   margin-bottom: 2rem;
+}
+
+.footer-list1 {
+  list-style-type: none;
 }
 
 .phone {
@@ -244,45 +300,34 @@ body {
   background-image: url(https://img.icons8.com/windows/32/000000/instagram-new.png);
 }
 
-.input-wrapper {
-  position: relative;
-}
+/* Responsive Design */
 
-.description {
-  position: absolute;
-  left: 10px;
-  top: 4px;
-  color: rgb(165, 165, 165);
-}
+@media screen and (max-width: 775px) {
+  .container-pic-two,
+  .container-pic-one {
+    display: flex;
+    flex-direction: column-reverse;
+  }
+  .container,
+  .flex-footer {
+    display: flex;
+    flex-direction: column;
+  }
 
-.input {
-  width: 300px;
-  margin-right: 1rem;
-  font-size: 1rem;
-  padding-inline: 0.1rem;
-  padding-block: 0.8rem;
-  display: table-cell;
-  vertical-align: bottom;
-}
+  :root {
+    text-align: center;
+  }
 
-input:focus + .description,
-.text-input:not(:placeholder-shown) + .description {
-  font-size: 0.8rem;
-  top: 1px;
-}
+  .phone {
+    width: 100%;
+  }
 
-.quote-item {
-  background-image: url(illustrations/icon-quotes.svg);
-  width: 15px;
-  height: 15px;
-  background-size: cover;
-}
+  .social-media {
+    margin-inline: auto;
+  }
 
-.quote-container {
-  background-color: white;
-  width: 400px;
-  padding: 2rem;
-  margin: 2rem;
-  border-radius: 0.8rem;
-  box-shadow: 10px 14px rgba(223, 222, 222, 0.521);
+  .input-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
 }
